[package]
name = "no-dm-forever"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.11.7", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
log = "0.4.20"
env_logger = "0.10.0"
reqwest = { version = "0.11.22", features = ["json"] }
once_cell = "1.18.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
chrono = "0.4.31"
dotenvy = "0.15.7"